--- a/style.css
+++ b/style.css
@@ -86,6 +86,70 @@ li {
     text-decoration: none;
 }
 
+.btn__menu {
+    background-color: transparent;
+    font-size: 40px;
+    text-align: center;
+    border: none;
+    color: #7342d6;
+    display: none;
+}
+
+.menu__backdrop {
+    position: absolute;
+    background-color: #242424;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 100;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: all 300ms ease;
+    opacity: 0;
+    visibility: hidden;
+}
+
+.menu--open .menu__backdrop {
+    visibility: visible;
+    opacity: 1;
+}
+
+.menu--open {
+    max-height: 100vh;
+    overflow-y: hidden;
+}
+
+.menu__links {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+} 
+
+.btn__menu--close {
+    position: absolute;
+    right: 20px;
+    top: 10px;
+    padding: 8px;
+    color: white;
+}
+
+.menu__list {
+    padding: 32px 0;
+}
+
+.menu__link {
+    font-size: 40px;
+    color: white;
+}
+
+/* 
+
+LANDING 
+
+*/
+
 #landing  {
     background-color: rgb(115, 66, 214, 0.1);
 }
@@ -203,6 +267,7 @@ HIGHLIGHTS
 
 .highlight__wrapper {
     display: flex;
+    flex-wrap: wrap;
 }
 
 .highlight {
@@ -210,8 +275,8 @@ HIGHLIGHTS
     width: calc(100% / 3);
     text-align: center;
     display: flex;
-    flex-direction: column;
     align-items: center;
+    flex-direction: column;
 }
 
 .highlight__para {
@@ -248,8 +313,9 @@ HIGHLIGHTS
     background-color: rgb(115, 66, 214, 0.1);
 }
 
-.books {
+.books, .books__latest{
     display: flex;
+    flex-wrap: wrap;
 }
 
 .book {
@@ -308,10 +374,10 @@ Latest Books
 
 */
 
-.books__latest {
+/* .books__latest {
     display: flex;
     flex-wrap: wrap;
-}
+} */
 
 /* 
 
@@ -343,4 +409,46 @@ footer {
 
 .footer__link {
     padding: 0 8px;
+}
+
+/* TABLETS */
+    @media (max-width: 768px) {
+        .header__description {
+            padding: 0 24px;
+            font-size: 40px;
+        }
+
+        h1 {
+            font-size: 40px;
+        }
+
+        h2 {
+            font-size: 26px;
+        }
+
+        button {
+            font-size: 18px;
+        }
+
+        .book {
+            width: 50%;
+        }
+    }
+/* SMALL PHONES, LARGE SMARTPHONES */
+@media (max-width: 550px) {
+    .nav__links {
+        display: none;
+    }
+
+    .btn__menu {
+        display: block;
+    }
+
+    .highlight {
+        width: 100%;
+    }
+
+    .highlight:not(:last-child) {
+        margin-bottom: 24px;
+    }
 }
